algorims-eks-complete-main/algorims-dev-cd-repo/templates/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello-world
status:
  loadBalancer: {}
