algorims-eks-complete-main/algorims-dev-cd-repo/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: hello-world.app.algorims.net
      http:
        paths:
          - backend:
              service:
                name: hello-world-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hello-world.app.algorims.net
      secretName: letsencrypt-production
